# pfizer-case-study

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  base-env.dockerfile  pyproject.toml
.github/: test-build.yml
.github/workflows/: build-base-mlflow.yml  build-base.yml  test-build.yml
mlflow/: .dockerignore  Dockerfile  artifact_location_fix.py  mlflow.db
mlflow/artifacts/0/080118dd6dff429982bee5edd68708bf/artifacts/: classification_report.json
mlflow/artifacts/0/11412fa54bfa4323a83c8a39baf83753/artifacts/: classification_report.json
mlflow/artifacts/0/13de48fadad14432b4a6bdfb70a3876a/artifacts/: classification_report.json
mlflow/artifacts/0/4bba005b04e34864ba3cd73f85c81976/artifacts/: classification_report.json
mlflow/artifacts/0/5009d9dbd0d243e8ab66b5b4db2f0530/artifacts/: classification_report.json
mlflow/artifacts/0/5034606747d7493aa18b6d346cd1eba3/artifacts/: classification_report.json
mlflow/artifacts/0/522f732155e64a5fb4dcaf02b3cfcb40/artifacts/: classification_report.json
notebooks/: Training.ipynb  evidently.ipynb  expt.ipynb
src/churn_detection/: main.py
src/churn_detection/deployment/: app.py
src/churn_detection/deployment/static/: style.css
src/churn_detection/deployment/templates/: form.html
src/churn_detection/mlflow/: __init__.py
src/churn_detection/model/: eval.py  train.py
src/churn_detection/utils/: config.py  io.py  logger.py  mlflow_utils.py
src/tests/model/: test_eval.py
src/tests/utils/: test_io.py  test_logger.py  test_mlflow_utils.py
(+84 files in other folders)
